--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@biomejs/biome": "^1.5.3",
+    "@types/canvas-confetti": "^1.6.4",
+    "canvas-confetti": "^1.9.2",
     "solid-js": "^1.8.15"
   },
   "devDependencies": {
